odevzdani/tests/invalid_sem/com/com12.java
class Main {
    static void run() {
        int b = 0;
        if (5 > "Ahoj")
            b = 1;
        else
            return;
        return;
    }
}
